include/sonare/sonare_c_mastering.h

typedef struct {
  const char* key;
  double value;
} SonareMasteringParam;
/// @brief Progress callback type. Called per chain stage completion.
/// @param progress Progress value (0.0 to 1.0).
/// @param stage    Stage identifier C string (e.g. "dynamics.compressor"). Valid
///                 only during the callback invocation; copy if needed later.
/// @param user_data Opaque pointer passed at registration.
typedef void (*SonareMasteringProgressCallback)(float progress, const char* stage, void* user_data);
/// Explanation-oriented before/after measurements for an offline mastering run.
/// @c band_energy_delta_db is after-minus-before, from 20 Hz to Nyquist.
typedef struct {
  SonareMasteringLoudnessSummary before;
  SonareMasteringLoudnessSummary after;
  float applied_gain_db;
  float max_gain_reduction_db;
  int loudness_target_limited;
  float band_energy_delta_db[SONARE_MASTERING_REPORT_BAND_COUNT];
} SonareMasteringReport;
// Result of running the MasteringChain on a mono buffer. Offline chain/master_audio
// outputs are latency-compensated, so this frozen result layout intentionally
// reports no separate latency_samples field.
// Memory for @c samples and @c stages (and each char* entry inside it) is
// allocated by libsonare with @c new[]; free with
// @c sonare_free_mastering_chain_result.
typedef struct {
  float* samples;
  size_t length;
  int sample_rate;
  float input_lufs;
  float output_lufs;
  float applied_gain_db;
  char** stages;  // newline-free stage identifiers, e.g. "dynamics.compressor"
  size_t stages_count;
  // ITU-R BS.1770-4 true peak of the output (dBTP). Lets callers verify a
  // preset ceiling was met without a second oversampled scan.
  //
  // The oversample factor follows the peak-limiting stage the chain actually
  // applied, so it is not fixed: the loudness stage's true-peak oversample
  // (default 4x) when loudness is enabled, and the maximizer true-peak
  // limiter's own oversample factor when loudness is disabled but that stage
  // ran. The two disagree by roughly 0.02 dB between 4x and 8x, so a caller
  // comparing this against an independently measured peak must use the same
  // factor the chain used.
  float output_true_peak_dbtp;
  // EBU Tech 3342 Loudness Range of the output (LU).
  float output_lra;
  // Non-zero when the requested LUFS gain was reduced to respect the true-peak
  // ceiling. output_lufs is the achieved value, not the requested target.
  int loudness_target_limited;
  // Per-stage gain reductions for the dynamics / maximizer stages that report
  // one (a subset of @c stages). @c stage_gain_reduction_stages holds the stage
  // identifiers and @c stage_gain_reduction_values the matching dB values
  // (<= 0), both of length @c stage_gain_reductions_count. Memory is allocated
  // by libsonare and released by @c sonare_free_mastering_chain_result.
  char** stage_gain_reduction_stages;
  float* stage_gain_reduction_values;
  size_t stage_gain_reductions_count;
  /// Aggregated before/after measurements for UI and artifact reporting.
  SonareMasteringReport report;
} SonareMasteringChainResult;
// Result of running the MasteringChain on stereo buffers. Offline chain/master_audio
// outputs are latency-compensated; same ownership rules as
// @c SonareMasteringChainResult; free with
// @c sonare_free_mastering_chain_stereo_result.
typedef struct {
  float* left;
  float* right;
  size_t length;
  int sample_rate;
  float input_lufs;
  float output_lufs;
  float applied_gain_db;
  char** stages;
  size_t stages_count;
  // See @c SonareMasteringChainResult for field semantics. Released by
  // @c sonare_free_mastering_chain_stereo_result.
  float output_true_peak_dbtp;
  float output_lra;
  int loudness_target_limited;
  char** stage_gain_reduction_stages;
  float* stage_gain_reduction_values;
  size_t stage_gain_reductions_count;
  SonareMasteringReport report;
} SonareMasteringChainStereoResult;
/// @brief Same as sonare_mastering_chain but reports per-stage progress.
/// @param user_data Passed back to @p callback unchanged. Neither pointer is retained past this
///   call: the callback runs on the calling thread and nothing is stored once it returns.
SonareError sonare_mastering_chain_with_progress(const float* samples, size_t length,
                                                 int sample_rate,
                                                 const SonareMasteringParam* params,
                                                 size_t param_count,
                                                 SonareMasteringProgressCallback callback,
                                                 void* user_data, SonareMasteringChainResult* out);
/// @brief Same as sonare_mastering_chain_stereo but reports per-stage progress.
/// @param user_data Passed back to @p callback unchanged. Neither pointer is retained past this
///   call: the callback runs on the calling thread and nothing is stored once it returns.
SonareError sonare_mastering_chain_stereo_with_progress(const float* left, const float* right,
                                                        size_t length, int sample_rate,
                                                        const SonareMasteringParam* params,
                                                        size_t param_count,
                                                        SonareMasteringProgressCallback callback,
                                                        void* user_data,
                                                        SonareMasteringChainStereoResult* out);
/// @brief Returns built-in preset identifiers, separated by '\n'.
/// @details Backed by thread-local storage filled on first use; the pointer is
///   valid for the calling thread's lifetime (and stays valid across later API
///   calls on that thread, unlike @ref sonare_mastering_insert_param_names). Do
///   NOT cache it across threads or use it after the producing thread exits, and
///   do NOT free it. Returns NULL if the name table cannot be built.
const char* sonare_mastering_preset_names(void);
/// @brief Apply a preset chain to mono audio.
/// @param preset_name e.g. "pop", "aiMusic". See @c sonare_mastering_preset_names().
/// @param overrides   Optional Param overrides (same flat dot-notation as
///                    @c sonare_mastering_chain). Pass NULL/0 for preset defaults.
SonareError sonare_master_audio(const char* preset_name, const float* samples, size_t length,
                                int sample_rate, const SonareMasteringParam* overrides,
                                size_t override_count, SonareMasteringChainResult* out);
/// @brief Stereo equivalent of @c sonare_master_audio.
SonareError sonare_master_audio_stereo(const char* preset_name, const float* left,
                                       const float* right, size_t length, int sample_rate,
                                       const SonareMasteringParam* overrides, size_t override_count,
                                       SonareMasteringChainStereoResult* out);
/// @brief Same as sonare_master_audio but reports per-stage progress.
/// @param user_data Passed back to @p callback unchanged. Neither pointer is retained past this
///   call: the callback runs on the calling thread and nothing is stored once it returns.
SonareError sonare_master_audio_with_progress(const char* preset_name, const float* samples,
                                              size_t length, int sample_rate,
                                              const SonareMasteringParam* overrides,
                                              size_t override_count,
                                              SonareMasteringProgressCallback callback,
                                              void* user_data, SonareMasteringChainResult* out);
/// @brief Same as sonare_master_audio_stereo but reports per-stage progress.
/// @param user_data Passed back to @p callback unchanged. Neither pointer is retained past this
///   call: the callback runs on the calling thread and nothing is stored once it returns.
SonareError sonare_master_audio_stereo_with_progress(
    const char* preset_name, const float* left, const float* right, size_t length, int sample_rate,
    const SonareMasteringParam* overrides, size_t override_count,
    SonareMasteringProgressCallback callback, void* user_data,
    SonareMasteringChainStereoResult* out);
/// @brief Latest equalizer waveform streams, per-band gains and magnitude profile.
/// @details @c pre_* and @c post_* hold uniformly decimated time-domain samples
/// of the block as it entered and left the equalizer, valid up to @c pre_count
/// and @c post_count entries. They are a scope feed and are not a spectral
/// estimate. @c band_gain_db reports the gain each configured band applied.
/// @c profile_db is the frequency-domain view: the post-equalizer signal is
/// Hann-windowed, transformed, and its bin powers summed into
/// @c SONARE_EQ_SPECTRUM_PROFILE_BANDS geometrically spaced bands covering
/// 20 Hz to 20 kHz. Values are amplitude decibels relative to full scale, so a
/// full-scale sine reads roughly 0 dB in the band containing it; the profile
/// rises immediately and falls smoothly. Bands that no analysis bin reaches
/// (above Nyquist) read the numerical floor.
typedef struct {
  float pre_left[SONARE_EQ_SPECTRUM_STREAM_CAPACITY];
  float pre_right[SONARE_EQ_SPECTRUM_STREAM_CAPACITY];
  float post_left[SONARE_EQ_SPECTRUM_STREAM_CAPACITY];
  float post_right[SONARE_EQ_SPECTRUM_STREAM_CAPACITY];
  size_t pre_count;
  size_t post_count;
  float band_gain_db[SONARE_EQ_MAX_BANDS];
  float profile_db[SONARE_EQ_SPECTRUM_PROFILE_BANDS];
  float last_auto_gain_db;
  uint64_t seq;
} SonareEqSnapshot;
/// @brief Clears the external sidechain. Accepts NULL.
void sonare_eq_clear_sidechain(SonareEq* eq);
/// @brief Processes one in-place planar audio block.
/// @details @p num_samples must not exceed the @p max_block_size supplied to
/// @ref sonare_eq_create; all @p channels must contain @p num_samples frames.
SonareError sonare_eq_process(SonareEq* eq, float* const* channels, int num_channels,
                              int num_samples);
/// @brief Copies the latest waveform, per-band gain, magnitude profile, and
/// meter snapshot to @p out.
/// @details Refreshed by every @ref sonare_eq_process call; see
/// @ref SonareEqSnapshot for what each field holds.
SonareError sonare_eq_spectrum(const SonareEq* eq, SonareEqSnapshot* out);