bindings/python/src/libsonare/_ffi_signatures_mastering.py

                ctypes.c_int,
                ctypes.c_int,
            ]
            lib.sonare_eq_clear_sidechain.restype = None
            lib.sonare_eq_clear_sidechain.argtypes = [ctypes.c_void_p]
            lib.sonare_eq_process.restype = ctypes.c_int32
            lib.sonare_eq_process.argtypes = [
                ctypes.c_void_p,
                ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
                ctypes.c_int,
                ctypes.c_int,
            ]
            lib.sonare_eq_spectrum.restype = ctypes.c_int32
            lib.sonare_eq_spectrum.argtypes = [
                ctypes.c_void_p,
                ctypes.POINTER(SonareEqSnapshot),
            ]
        if hasattr(lib, "sonare_mastering_preset_names"):
            lib.sonare_mastering_preset_names.restype = ctypes.c_char_p
            lib.sonare_mastering_preset_names.argtypes = []
        if hasattr(lib, "sonare_master_audio"):
            lib.sonare_master_audio.restype = ctypes.c_int32
            lib.sonare_master_audio.argtypes = [
                ctypes.c_char_p,
                ctypes.POINTER(ctypes.c_float),
                ctypes.c_size_t,
                ctypes.c_int,
                ctypes.POINTER(SonareMasteringParam),
                ctypes.c_size_t,
                ctypes.POINTER(SonareMasteringChainResult),
            ]
            lib.sonare_master_audio_stereo.restype = ctypes.c_int32
            lib.sonare_master_audio_stereo.argtypes = [
                ctypes.c_char_p,
                ctypes.POINTER(ctypes.c_float),
                ctypes.POINTER(ctypes.c_float),
                ctypes.c_size_t,
                ctypes.c_int,
                ctypes.POINTER(SonareMasteringParam),
                ctypes.c_size_t,
                ctypes.POINTER(SonareMasteringChainStereoResult),
            ]
        if hasattr(lib, "sonare_mastering_chain_with_progress"):
            lib.sonare_mastering_chain_with_progress.restype = ctypes.c_int32
            lib.sonare_mastering_chain_with_progress.argtypes = [
                ctypes.POINTER(ctypes.c_float),
                ctypes.c_size_t,
                ctypes.c_int,
                ctypes.POINTER(SonareMasteringParam),
                ctypes.c_size_t,
                SonareMasteringProgressCallback,
                ctypes.c_void_p,
                ctypes.POINTER(SonareMasteringChainResult),
            ]
            lib.sonare_mastering_chain_stereo_with_progress.restype = ctypes.c_int32
            lib.sonare_mastering_chain_stereo_with_progress.argtypes = [
                ctypes.POINTER(ctypes.c_float),
                ctypes.POINTER(ctypes.c_float),
                ctypes.c_size_t,
                ctypes.c_int,
                ctypes.POINTER(SonareMasteringParam),
                ctypes.c_size_t,
                SonareMasteringProgressCallback,
                ctypes.c_void_p,
                ctypes.POINTER(SonareMasteringChainStereoResult),
            ]
        if hasattr(lib, "sonare_master_audio_with_progress"):
            lib.sonare_master_audio_with_progress.restype = ctypes.c_int32
            lib.sonare_master_audio_with_progress.argtypes = [
                ctypes.c_char_p,
                ctypes.POINTER(ctypes.c_float),
                ctypes.c_size_t,
                ctypes.c_int,
                ctypes.POINTER(SonareMasteringParam),
                ctypes.c_size_t,
                SonareMasteringProgressCallback,
                ctypes.c_void_p,
                ctypes.POINTER(SonareMasteringChainResult),
            ]
            lib.sonare_master_audio_stereo_with_progress.restype = ctypes.c_int32
            lib.sonare_master_audio_stereo_with_progress.argtypes = [
                ctypes.c_char_p,
                ctypes.POINTER(ctypes.c_float),
                ctypes.POINTER(ctypes.c_float),
                ctypes.c_size_t,
                ctypes.c_int,
                ctypes.POINTER(SonareMasteringParam),
                ctypes.c_size_t,
                SonareMasteringProgressCallback,
                ctypes.c_void_p,
                ctypes.POINTER(SonareMasteringChainStereoResult),
            ]
